Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2006-11-30 Kimmo
 PATCH: [ 1605682 ] Add Syntax Highlight option to config log
  Src: ConfigLog.cpp ConfigLog.h MainFrm.cpp
 PATCH: [ 1556685 ] Avoid infinite loop in character loop in crystal c++ parser
  Submitted by Perry
  Src/editlib: asp.cpp basic.cpp batch.cpp cplusplus.cpp csharp.cpp dcl.cpp fortran.cpp
   html.cpp innosetup.cpp is.cpp java.cpp lisp.cpp nsis.cpp. pascal.cpp perl.cpp php.cpp
   python.cpp rexx.cpp rsrc.cpp ruby.cpp sgml.cpp sh.cpp siod.cpp sql.cpp tcl.cpp tex.cpp
   xml.cpp

2006-11-30 Takashi
 BUG: [ 1603230 ] DirView icons isn't shown correctly on NT4.0
  Src/res: equalfile.ico fileskip.ico lfile.ico notequalfile.ico rfile.ico

2006-11-28 Kimmo
 PATCH: [ 1604078 ] Hide skipped items by default
  Src: OptionsInit.cpp

2006-11-28 Gal
 PATCH: [ 1603769 ] Send MergeCmdLineInfo between instances
  Src: MainFrm.cpp Merge.cpp MergeCmdLineInfo.cpp MergeCmdLineInfo.h

2006-11-27 Kimmo
 BUG: [ 1602214 ] Incorrect work with associated files in WinMerge 2.7.1.2
  Src: Merge.cpp
 PATCH: [ 1603196 ] Allow Open-dialog kind of folder selection for project files
  Src: FileOrFolderSelect.cpp FileOrFolderSelect.h OpenDlg.cpp OpenDlg.h

2006-11-27 Gal
 BUG: [ 1603562 ] Location pane's bar outlines
  Src: LocationView.cpp

2006-11-26 Kimmo
 Perry is not active developer
  Docs/Users: Contributors.txt

2006-11-25 Kimmo
 PATCH: [ 1602365 ] Move SelectFile and SelectFolder routines to separate file
  Src: DirActions.cpp DirCmpReportDlg.cpp FileFiltersDlg.cpp MainFrm.cpp Merge.cpp
   Merge.dsp Merge.h MergeDoc.cpp OpenDlg.cpp PatchDlg.cpp ProjectFilePathsDlg.cpp
   PropRegistry.cpp PropVss.cpp
  Src/Common: PreferencesDlg.cpp
  Src new files: FileOrFolderSelect.cpp FileOrFolderSelect.h

2006-11-24 Kimmo
 Fix bunch of doxygen warnings (wrong parameter names etc)
  Src: CmdLineParser.h DiffWrapper.cpp DirDoc.cpp FilepathEdit.cpp files.cpp